crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_082_TaitoX1_017_SD_Keiji_Blader_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-082-TaitoX1-017/SD Keiji - Blader (Japan).zip
rom_sha256=56534feaefdd9dc88a88c7732348b0bbe6ca0df0a542beedb71666995c3a96ac
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=bffd495070d304ee
checkpoint f900 fb_fnv1a64=6d050918defb6c5b
checkpoint f1100 fb_fnv1a64=cefded6db68263ac
