crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_083_Cony_Yoko_Street_Blaster_II_Pro_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-083-Cony-Yoko/Street Blaster II Pro (Unl) [!].nes
rom_sha256=c9dc390bc4358d74d7adae2790653e053fac8dc42fdab13c6a32f8d9d7be25a1
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=6a790a8b13e159b9
checkpoint f900 fb_fnv1a64=c7bba96c57a160f2
checkpoint f1100 fb_fnv1a64=c7bba96c57a160f2
