crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_085_VRC7_Lagrange_Point_J.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-085-VRC7/Lagrange Point (J) [!].nes
rom_sha256=3e8b4b68da3424a03c51aeceb5acb345d1d2738ad87342899a4053064a243b25
frames=700
fb_bytes=245760
cycles=20816585
audio_samples=512903
audio_fnv1a64=5faf42b49fe431c3
checkpoint f700 fb_fnv1a64=b3ac74f4f1cd5941
